# spark-mcp

./: .gitignore  PLAN.md  README.md  SETUP.md  claude_config.json  pyproject.toml  test_server.py  verify_all_tools.py
.claude/: settings.local.json
spark_mcp/: __init__.py  config.py  database.py  extractors.py  pdf_operations.py  server.py
spark_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
